--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "* Users visit different AR image markers around the office to see Builders in AR * When a user clicks a builder, the builder's dialogue appears * Users can also view builder \"tools\" in AR * Users can collect all the tools by viewing them * When a user visits a builder who has specified a preference for a particular tool (e.g. maybe Pyra wants a hammer), the user can \"gift\" the tool to the builder to unlock new dialogue",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC"
